fixed dashboard overflow issue

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -13,7 +13,7 @@
 
 .col {
     flex: 1;
-    min-width: 500px;
+    min-width: 400px;
     margin: 20px;
     border-radius: 12px;
     padding: 20px;
